file(GENERATE): Fix missing check for policy CMP0070

In commit 82be694c7a (file(GENERATE): Add policy CMP0070 to define
relative path behavior, 2017-06-08, v3.10.0-rc1~534^2), one path
calculation was forgotten.  Because of this the path name according to
the old behavior was added to the list of CMake generated files.

Fixes: #21038